added time tracker example. updated penumbra to be more reusable.